--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "eslint-plugin-vue": "^9.17.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
     "eslint": "^8.50.0",
-    "vite": "^4.4.9",
-    "vite-plugin-eslint": "^1.8.1"
+    "eslint-plugin-vue": "^9.17.0",
+    "vite": "^4.4.9"
   }
 }
