added ms azure synthed expressions as alernative to real records

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_DATABASE_URI=https://script.google.com/macros/s/AKfycbxSifZzh0G8Y95_mSfnLsErqS8RUrx73IgJmQvl1Oq81e08p_YeSKDrvoWo_MvljP0sBw/exec
+VITE_MY_SYNTH_FN=https://dthjysrf.duckdns.org/node-learn-eng/scripts/urlsForExpression.js
